--- a/src/main/resources/web-root/recruiter.html
+++ b/src/main/resources/web-root/recruiter.html
@@ -52,12 +52,18 @@
           class="apps"
         >
           <div th:each="app: ${applications}" class="app-loop">
-            <div
-              class="app-button"
-              th:text="${app.person.firstName+' '+app.person.lastName}"
-            ></div>
-          </div>
-        </div>
+            <form method="POST" th:action="@{/applic}">
+              <button
+                type="submit"
+                value="${app.person.firstName+' '+app.person.lastName}"
+                name="personApplic"
+                id="page-button">
+                <div
+                  class="app-button"
+                  th:text="${app.person.firstName+' '+app.person.lastName}"
+                ></div>
+              </button>
+            </form>
 
         <div class="grid-container">
           <div th:if="${prevPage == true}" class="page">
